2011-05-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (bin_links): Move mpost:metafun and mpost:mfplain
	from ../../texlive/linked_scripts/ to here.
	[MinGW]: Build call_mpost.exe wrapper binary and install as
	dvitomp.exe, metafun.exe, amd mfplain.exe.

2011-05-30 Taco Hoekwater  <taco@luatex.org>

	* all files: clarify that base MetaPost is public domain,
	but uses LGPL'd libraries.

2011-05-13  Taco Hoekwater  <taco@luatex.org>

	* mpost.w (main): change setting of kpse program name
	(on a hint by PEB).

2011-05-09  Taco Hoekwater  <taco@luatex.org>

	* mpxout.w (mpx_in_TFM): close tfm files.

2011-04-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mp.w (mp_do_snprintf): Removed, instead declare and define
	static internal version of mp_snprintf().
	Compare change from 2009-12-05:
	FIXME: Should unconditionally assume snprintf() exists.

2011-04-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/libmplib.am: Only one rule for tfmin.w => tfmin.c.

2011-04-05  Taco Hoekwater  <taco@luatex.org>

	* mp.w, mpost.w: import metapost 1.504

2011-04-05  Taco Hoekwater  <taco@luatex.org>

	* Import of MetaPost 1.503, updating the .w files as well
	as lmplib.c and avl.c, and adding mpmath.w and removing memio.w
	* am/libmplib.am: add support for mpmath.w, remove memio.w
	* mptrap.test: remove the second part as metapost no longer
	uses .mem files at all

2011-03-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/libmplib.am: Use AM_CFLAGS instead of libmplib_a_CFLAGS.
	* am/mplib.am: Use AM_CFLAGS instead of mpost_CFLAGS.

2011-02-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mplib.am [WIN32]: Add dvitomp.exe wrapper for MinGW.

2011-01-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mplib.am (mptrap.diffs): Use $(triptrap_diffs).

2011-01-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mplib.am (mptrap-clean): Use TRIPTRAP_CLEAN.

2010-12-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mplib.am: install-exec-hook and uninstall-hook rules now